--- a/animation/01-button-hover/style.css
+++ b/animation/01-button-hover/style.css
@@ -16,4 +16,11 @@ button {
   font-size: 18px;
   padding: 16px 24px;
   text-align: center;
+  transition: 0.4s ease-in-out;
+}
+
+button:hover {
+  padding: 24px 32px;
+  font-size: 24px;
+  transition: 0.4s;
 }
