--- a/foundations/04-chaining-selectors/style.css
+++ b/foundations/04-chaining-selectors/style.css
@@ -1,1 +1,12 @@
 /* Add CSS Styling */
+.avatar {
+    width: 300px;
+    height: auto;
+}
+
+.avatar.distorted {
+    width: 200px;
+    height: 400px;
+}
+
+/* "ЦЕПОЧКА СЕЛЕКТОРОВ" - это когда классы/идентификаторы сливаются задаются общим именем без пробелов */
